inserindo menu superior e criando pagina de eventos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<!-- src/app/app.component.html -->
+<app-navbar></app-navbar>
 
-<button (click)="toggleTheme()">
-  Toggle Theme
-</button>
-<router-outlet></router-outlet>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+</footer>
