--- a/src/app/events/event-list/event-list.component.html
+++ b/src/app/events/event-list/event-list.component.html
@@ -1,4 +1,14 @@
-<div *ngFor="let event of events" class="event">
-  <h2>{{ event.name }}</h2>
-  <p>{{ event.date }}</p>
+<div class="event-list-container">
+  <h2 class="page-title">Eventos Disponíveis</h2>
+  <div class="events-grid">
+    <div class="event-card" *ngFor="let event of events">
+      <img [src]="event.image" alt="Event Image" class="event-image"/>
+      <div class="event-details">
+        <h3 class="event-title">{{ event.title }}</h3>
+        <p class="event-date">{{ event.date | date }}</p>
+        <p class="event-location">{{ event.location }}</p>
+        <button class="event-button">Comprar Ingresso</button>
+      </div>
+    </div>
+  </div>
 </div>
