--- a/src/assets/styles/themes.css
+++ b/src/assets/styles/themes.css
@@ -1,4 +1,3 @@
-/* Tema Claro */
 :root {
   --color-primary: #6200EE;
   --color-primary-contrast: #FFFFFF;
@@ -10,7 +9,6 @@
   --color-alert: #FFC107;
 }
 
-/* Tema Escuro */
 [data-theme='dark'] {
   --color-primary: #BB86FC;
   --color-primary-contrast: #121212;
@@ -20,4 +18,15 @@
   --color-destructive: #CF6679;
   --color-success: #03DAC6;
   --color-alert: #FBC02D;
+}
+
+[data-theme='light'] {
+  --color-primary: #6200EE;
+  --color-primary-contrast: #FFFFFF;
+  --color-text: #000000;
+  --color-surface: #F5F5F5;
+  --color-background: #FFFFFF;
+  --color-destructive: #B00020;
+  --color-success: #018786;
+  --color-alert: #FFC107;
 }
