--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 body {
   background-color: var(--color-background);
   color: var(--color-text);
+  font-family: 'Poppins', sans-serif;
 }
 
 button {
